--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,120 @@ a {
 
 * {
   box-sizing: border-box;
+  color: #fff;
 }
+
+.container {
+  width: 100%;
+  height: 100vh;
+  /* background-color: black; */
+  /* background-image: url("/yolo1.webp"); */
+  background-position: center;
+  background-size: cover;
+}
+
+.bg::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(8px); /* apply the blur */
+  pointer-events: none; /* make the overlay click-through */
+}
+
+.bg {
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100vh;
+  background: no-repeat;
+  background-image: url("/yolo1.webp");
+  background-size: cover;
+}
+
+.card-container {
+  width: 100%;
+  height: auto;
+  padding: 50px;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn {
+  width: auto;
+  padding: 10px 30px;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+  overflow: hidden;
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+
+  background: black;
+  font-family: inherit;
+}
+
+.select, .option{
+  padding: 8px;
+  background-color: #fff;
+  color: black;
+}
+
+.option{
+
+}
+
+.btn--bull {
+  background-color: green;
+  width: 100%;
+}
+
+.btn--bear {
+  background-color: red;
+  width: 100%;
+}
+
+/* nav bar */
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid black;
+}
+
+/* card */
+.card {
+  width: 100%;
+  padding: 25px;
+  background-color: black;
+  margin: 10px;
+}
+
+.card-img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+}
+
+.card-header {
+  display: flex;
+}
+
+.card-cta {
+  display: flex;
+}
+
+.card-cta .btn {
+  margin: 5px;
+}
+
+.show-counter {
+  display: flex;
+}
+
