--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;300;400;500;600;700;800&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "JetBrains Mono", monospace;
 }
 
 a {
@@ -62,32 +63,53 @@ a {
   border: none;
   border-radius: 8px;
   overflow: hidden;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
   color: white;
   cursor: pointer;
 
   background: black;
   font-family: inherit;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.select, .option{
+.select,
+.option {
   padding: 8px;
   background-color: #fff;
   color: black;
 }
 
-.option{
-
+.option {
 }
 
 .btn--bull {
-  background-color: green;
+  background-color: #2eb086;
   width: 100%;
+
+  text-shadow: -1px -1px #2eb086, 1px 1px #2eb086;
+  border-radius: 7px;
+  box-shadow: 0 0.2em #74ccb0;
+  cursor: pointer;
+}
+
+.btn--bull:active, .btn--bear:active {
+  box-shadow: none;
+  position: relative;
+  top: 0.2em;
 }
 
 .btn--bear {
-  background-color: red;
+  background-color: #e83a14;
   width: 100%;
+
+  text-shadow: -1px -1px #e83a14, 1px 1px #e83a14;
+  border-radius: 7px;
+  box-shadow: 0 0.2em #e06246;
+  cursor: pointer;
 }
 
 /* nav bar */
@@ -104,8 +126,10 @@ a {
 .card {
   width: 100%;
   padding: 25px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   margin: 10px;
+  border-radius: 10px;
+  border: 2px solid #000;
 }
 
 .card-img {
@@ -130,3 +154,9 @@ a {
   display: flex;
 }
 
+.show-counter p {
+  font-size: 28px;
+  font-weight: bolder;
+  margin: 0;
+  text-align: center;
+}
