--- a/styles/globals.css
+++ b/styles/globals.css
@@ -185,4 +185,28 @@ a {
   color: #000;
   border-radius: 8px;
   margin: 5px;
+
+  position: relative;
+  top: 0;
+  text-decoration: none !important;
+  outline: none !important;
+  font-size: 20px;
+  line-height: 1.5em;
+  letter-spacing: 0.1em;
+ 
+ 
+  border-bottom: 3px solid rgba(16, 91, 146, 0.5);
+  border-top: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 8px;
+  padding: 8px 15px 10px;
+}
+
+/* create pool */
+.heading-input{
+  font-size: 20px;
+}
+
+.inp option{
+  background-color: #000;
+  color: #fff;
 }
